@@ -1,3 +1,8 @@
+2018-03-22  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/topol.c Use rather MagickSwabArrayOfUInt32() to
+        flip all array elements at once.
+
 2018-03-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/dpx.c (ReadDPXImage): Validate header length and offset
